prevent vertical shift when reloading

--- a/calendar.css
+++ b/calendar.css
@@ -1,5 +1,6 @@
 #CalendarWrap {
 	line-height: 0;
+	height: calc((13px + 2px) * 7);
 }
 
 #CalendarWrap .Day {
